rm: log append